--- a/clusters/infra.yaml
+++ b/clusters/infra.yaml
@@ -9,7 +9,7 @@ spec:
     properties:
       repoType: git
       url: https://github.com/FogDong/KubeVela-GitOps-Infra-Demo
-      secretRef: git-secret
+      #secretRef: git-secret
       pullInterval: 10m
       git:
         branch: main
