--- a/clusters/apps.yaml
+++ b/clusters/apps.yaml
@@ -8,8 +8,8 @@ spec:
     type: kustomize
     properties:
       repoType: git
-      url: https://github.com/FogDong/KubeVela-GitOps-Infra-Demo
-      secretRef: git-secret
+      url: https://github.com/gfsxt1314/KubeVela-GitOps-Infra-Demo
+      #secretRef: git-secret
       pullInterval: 1m
       git:
         branch: main
